resources/css/main.css
/* Reset */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family:
    "Lucida Sans",
    "Lucida Sans Regular",
    "Lucida Grande",
    "Lucida Sans Unicode",
    Geneva,
    Verdana,
    sans-serif;
}

*,
*::before,
*::after {
  box-sizing: inherit;
}

a {
  text-decoration: none;
  color: #000;
}

.clearfix::after {
  content: ".";
  display: block;
  clear: both;
  visibility: hidden;
}

li a {
  text-decoration: none;
}

header a {
  font-size: 14px;
  text-decoration: none;
  color: black;
}

.last-nav a {
  color: #aaa;
  text-transform: uppercase;
  font-size: 12px;
  font-weight: bold;
}

.icons a {
  text-transform: uppercase;
  font-weight: bold;
  font-size: 12px;
  color: #7d7c7c;
  display: inherit;
}

.first-nav li {
  background: #131313;
  margin: 0 5px;
}

.first-nav li a {
  color: #7d7c7c;
  font-size: 12px;
  font-weight: bold;
}

.last-nav ul li {
  margin-right: 20px;
}

.icons ul li {
  margin-right: 10px;
}

article.fund h2 a {
  color: #fff;
}

article.fund ul li {
  padding: 5px 5px;
}

article.fund ul li a {
  font-weight: 100;
  font-size: 0.8em;
  color: #555;
}

.icons a:hover,
.icons a:active {
  color: #fff;
}

.first-ul li:first-of-type {
  margin-left: 15px;
}

.last-ul li:last-of-type {
  margin-right: 15px;
}

.icons ul:first-of-type li {
  background: #7d7c7c;
  height: 40px;
  width: 40px;
  border-radius: 50%;
  display: grid;
  grid-template-columns: 1fr;
  align-items: center;
}

ul {
  list-style: none;
  padding: 5px;
}

.icons ul {
  display: flex;
  justify-content: center;
  height: 50%;
}

/* Header */
header {
  width: 100%;
  position: fixed;
  top: 0;
  background: #fff;
  z-index: 10;
}

.logo {
  display: none;
}

.menu {
  display: none;
}

.first-nav {
  display: flex;
  flex-wrap: wrap;
  background: #131313;
  align-content: center;
}

.first-ul {
  flex: 1;
  display: flex;
  justify-content: flex-start;
}

.last-ul {
  flex: 1;
  display: flex;
  justify-content: flex-end;
}

.first-nav li a:hover,
.first-nav li a:active {
  color: white;
}

.last-nav {
  display: flex;
  justify-content: space-between;
}

.last-nav ul {
  flex-basis: 800px;
  display: flex;
  flex-wrap: wrap;
  align-content: center;
}

.last-nav div {
  border-left: 1px solid #ccc;
  padding: 5px;
}

.last-nav img {
  width: 30px;
  height: 30px;
}

.last-nav ul li:first-child {
  margin-left: 20px;
}

input {
  width: 50px;
  height: 40px;
  padding: 5px;
}

header .ticket {
  display: flex;
  height: 30px;
  align-items: center;
  background: #fd3;
}

header a p {
  padding-left: 20px;
}

@media screen and (max-width: 1023px) {
  header .nav-container {
    display: grid;
    grid-template-columns: 100px 1fr;
    grid-template-rows: auto;
    grid-template-areas:
      "logo nav1"
      "logo nav2";
  }

  .logo {
    grid-area: logo;
    background: #f42;
  }

  .first-nav {
    grid-area: nav1;
  }

  .last-nav {
    grid-area: nav2;
  }

  header p {
    font-size: 12px;
    text-align: center;
  }
}

@media screen and (max-width: 810px) {
  .last-ul {
    display: none;
  }
}

@media screen and (max-width: 767px) {
  .first-nav {
    display: none;
  }

  .last-nav ul * {
    display: none;
  }

  .menu {
    display: block;
  }
}

/* Carousel */

.carousel {
  margin-top: 70px;
  display: grid;
  grid-template-columns: 100%;
  grid-template-rows: repeat(3, auto);
  justify-items: center;
  color: #fff;
}

.carousel div:nth-child(2n + 1) {
  width: 95%;
  margin: 2px 0;
}

.slide1 {
  background-image:
    linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.7)),
    url("img/1200px-Musée_Matisse_Nice.jpg");
  background-size: cover;
  background-repeat: no-repeat;

  /* padding: 10px; */
}

.slide1 section {
  display: none;
  flex-wrap: wrap;
  justify-content: space-between;
}

.slide1 section h1 {
  font-size: 1100%;
  font-weight: bolder;
}

.insight span {
  font-size: 80%;
  color: #aaa;
}

.tech span {
  font-size: 80%;
}

.deals-content span {
  font-size: 12px;
}

.slide1 section span {
  font-size: 12px;
  font-weight: 100;
}

.insight {
  display: grid;
  grid-template-rows: auto 1fr auto;
  grid-gap: 10px;
}

.insight h2 {
  font-size: 320%;
  font-weight: bolder;
}

.slide2 {
  background-image:
    linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.7)),
    url("img/1200px-nizza-cote_dazur.jpg");
  background-size: cover;
  background-repeat: no-repeat;
}

.slide3 {
  background-image:
    linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.7)),
    url("img/download.jfif");
  background-size: cover;
  background-repeat: no-repeat;
}

.tech {
  padding-top: 60px;
  padding-left: 10px;
  padding-right: 10px;
  display: grid;
  grid-template-rows: auto 1fr auto;
  grid-gap: 10px;
}

.tech h2 {
  font-weight: bolder;
  color: #aaa;
}

@media screen and (min-width: 768px) {
  .carousel {
    display: grid;
    grid-template-columns: 70% 30%;
    grid-template-rows: auto;
    grid-template-areas:
      "slide1 slide2"
      "slide1 slide3";
  }

  .carousel div:nth-child(1) {
    grid-area: slide1;
    height: 450px;
  }

  .carousel div:nth-child(2) {
    grid-area: slide2;
    width: 100%;
    margin: 2px 0;
  }

  .carousel div:nth-child(3) {
    grid-area: slide3;
    width: 100%;
    margin: 2px 0;
  }

  .slide1 section {
    display: flex;
  }
}

@media screen and (max-width: 767px) {
  .insight {
    grid-gap: 2px;
    padding: 10px 10px 0 10px;
  }

  .insight h2 {
    font-size: 16px;
  }

  .tech {
    padding-top: 10px;
    grid-gap: 2px;
  }

  .tech h2 {
    font-size: 16px;
  }

  .slide2 {
    display: inherit;
    width: 95%;
  }
}

/* Latest news */
.latest-news h2,
.latest-news-articles {
  width: 98%;
  margin: 0 auto;
}

section.latest-news h2 {
  margin-top: 30px;
  color: #f24120;
}

section.latest-news article {
  margin: 20px 10px;
  display: grid;
  grid-template-columns: 15% 85%;
  grid-template-rows: auto;
  grid-template-areas:
    "img title"
    "img content";
  gap: 5px 10px;
}
/* ... */

